[gd_scene load_steps=2 format=3 uid="uid://c7unf4u2b3edg"]

[ext_resource type="Script" path="res://scenes/menu/create_account_form.gd" id="1_kr0ve"]

[node name="CreateAccountForm" type="Node2D"]
position = Vector2(768, 192)
scale = Vector2(2, 2)
script = ExtResource("1_kr0ve")

[node name="Labels" type="Node2D" parent="."]

[node name="CreateAccountLabel" type="Label" parent="Labels"]
offset_left = 32.0
offset_right = 160.0
offset_bottom = 23.0
text = "Create Account"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="UsernameLabel" type="Label" parent="Labels"]
offset_top = 40.0
offset_right = 128.0
offset_bottom = 63.0
text = "Username:"
metadata/_edit_use_anchors_ = true

[node name="PasswordLabel" type="Label" parent="Labels"]
offset_top = 104.0
offset_right = 128.0
offset_bottom = 127.0
text = "Password:"
metadata/_edit_use_anchors_ = true

[node name="ConfirmPasswordLabel" type="Label" parent="Labels"]
offset_top = 166.0
offset_right = 146.0
offset_bottom = 189.0
text = "Confirm Password:"
metadata/_edit_use_anchors_ = true

[node name="QuestionLabel" type="Label" parent="Labels"]
offset_top = 222.0
offset_right = 154.0
offset_bottom = 271.0
text = "What was the name 
of your first school?"
metadata/_edit_use_anchors_ = true

[node name="ErrorLabel" type="Label" parent="Labels"]
offset_left = 4.0
offset_top = 320.0
offset_right = 192.0
offset_bottom = 343.0
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Node2D" parent="."]

[node name="SignUpButton" type="Button" parent="Buttons"]
offset_top = 356.0
offset_right = 88.0
offset_bottom = 387.0
text = "Sign Up"
metadata/_edit_use_anchors_ = true

[node name="CancelButton" type="Button" parent="Buttons"]
offset_left = 104.0
offset_top = 356.0
offset_right = 192.0
offset_bottom = 387.0
text = "Cancel"
metadata/_edit_use_anchors_ = true

[node name="Input" type="Node2D" parent="."]

[node name="UsernameInput" type="LineEdit" parent="Input"]
offset_top = 64.0
offset_right = 192.0
offset_bottom = 95.0
placeholder_text = "Username"
metadata/_edit_use_anchors_ = true

[node name="PasswordInput" type="LineEdit" parent="Input"]
offset_top = 128.0
offset_right = 192.0
offset_bottom = 159.0
placeholder_text = "Password"
secret = true
metadata/_edit_use_anchors_ = true

[node name="ConfirmPasswordInput" type="LineEdit" parent="Input"]
offset_top = 190.0
offset_right = 192.0
offset_bottom = 221.0
placeholder_text = "Password"
secret = true
metadata/_edit_use_anchors_ = true

[node name="QuestionInput" type="LineEdit" parent="Input"]
offset_top = 278.0
offset_right = 192.0
offset_bottom = 309.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
